<?xml version="1.0" encoding="utf-8"?>
<resources>

   <!-- Menu Page Strings -->
    <string name="app_name">Koor</string>
    <string name="action_settings">Settings</string>
    <string name="play_button_text">Play</string>
    <string name="help_button_text">Help</string>
    <string name="settings_button_text">Settings</string>
    <string name="upgrade_button_text">Upgrade (No Ads)</string>
    <string name="menu_image_descrip">Main large menu image</string>
    
   <!-- Help Page Strings -->
    <string name="help_title">Need Help?</string>
    <string name="help_bidding_title">Bidding</string>
    <string name="help_bidding_text">•Ten cards are dealt to each player, and five cards are dealt to the 
        "kitty."\n•The bid minimum is 100 and proceeds clockwise where each player may pass or bid.
        \n•The winner of bidding chooses trump and gets the kitty. The winner can then discard five cards
        to place back in the kitty. They then get to choose a trump color for the game.
        </string>
    <string name="help_playing_title">Playing</string>
    <string name="help_playing_text">•This is a team game. Partners are across from each other on
        the game board.\n•The objective is to be the first team to reach a certain number of points
        (this can be changed in Settings)\n•Once trump is chosen, cards are played in a clockwise 
        fashion. Players must follow the lead suit if they have it, otherwise they can play any card.
        Every time all four players play, the trick is taken and points are added. A trump card 
        beats any non-trump card, and a non-suit card can\'t take the trick. The player that took
        the trick leads off the next round. This continues for ten tricks, until the cards are
        dealt again. Gameplay continues until the specified winning number of points is reached.
        \n•For example, in the image below, you are partners with player 2, and players 1 and 3
         are partners. The winning card will take the points of the trick.</string>
    <string name="help_scoring_title">Scoring</string>
    <string name="help_scoring_text">A team scores by capturing tricks with point cards, weighted
        as follows:\n•The Rook is 20 points\n•Every 1 is 15 points\n•Every 10 and 14 are 10 points
        \n•Every 5 is 5 points\nThe team that captures the last trick also counts the kitty in
        the point total.\nThe team that won the most tricks adds an additional 20 points.
       	\nIf a team won the bid and did not meet their bid, they are set back by the number of points
       	their bid was. If a team did not win the bid, they count the number of points they made.
       	\nFor example, in the image above, the 1 card will take the trick as it is the highest
       	scoring card. </string>
   
    <!-- Settings Page Strings -->
      <string name="settings_title">Change Game Settings</string>
      <string name="settings_points">Change Winning Points:</string>
      <string name="settings_background">Change Background Color:</string>
      <string name="points_prompt">Change Winning Points</string>
      <string-array name="points_array">
		<item>100</item>
		<item>200</item>
		<item>300</item>
		<item>400</item>
		<item>500</item>
		</string-array>
    
    <!-- Bidding Fragment Strings -->
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    <string name="player3">Player 3:</string>
    <string name="player4">My card:</string>
    <string name="zero">0</string>
    <string name="hundred">100</string>
    <string name="bid_plus_five">+5</string>
    <string name="my_bid">My Bid: </string>
    <string name="bid_go">Bid It!</string>
    <string name="pass">Pass</string>
    <string name="ok">OK</string>
    
    <!--  Trick Fragment -->
    <string name="high_bid">High Bid:</string>
    <string name="trick_winner">Trick Winner is:</string>
    
    <!-- Discard Fragment Strings -->
    <string name="discard_instructions">Click a card to discard it! You can only choose five.</string>
    <string name="discard_button_text">Discard</string>
    <string name="choose_trump_text">Choose Trump</string>
    
    <!-- Choose/Alert Trump Dialog Fragment Strings -->
      <string name="choose_trump_dialog_text">You must first choose a trump color</string>
      
    <!-- Game Fragment Strings -->
    <string name="team1">Team One:</string>
    <string name="team2">Team Two:</string>
    <string name="banner_ad_unit_id">ca-app-pub-8436145435379887/7134674053</string>
    <string name="trump">Trump:</string>

</resources>
