<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" 
        android:textStyle="bold"/>
    
    <ImageView
        android:id="@+id/menu_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_title"
        android:layout_above="@+id/play_button"
        android:src="@drawable/menu_image" 
        android:contentDescription="@string/menu_image_descrip"/>
    
    <Button
        android:id="@+id/play_button"
        style="@style/menu_button"
        android:layout_above="@+id/help_button"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:text="@string/play_button_text"
        android:onClick="startGame" />
    
    <Button
        android:id="@+id/help_button"
        style="@style/menu_button"
        android:layout_above="@+id/settings_button"
		android:layout_marginTop="@dimen/menu_button_margin"
		android:text="@string/help_button_text"
        android:onClick="openHelpMenu" />
    
    <Button
        android:id="@+id/settings_button"
        style="@style/menu_button"
        android:layout_above="@+id/upgrade_button"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:text="@string/settings_button_text"
        android:onClick="openSettingsMenu" />
        
    <Button
		android:id="@+id/upgrade_button"
		style="@style/menu_button"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="@dimen/menu_button_margin"
		android:text="@string/upgrade_button_text" 
		android:onClick="openPlayStore"/>

</RelativeLayout>
